Add unit and integration tests for guardian-by-ffmpeg functionality
- Created pytest configuration file (pytest.ini) for test discovery and coverage reporting.
- Implemented a test runner script (run_tests.py) to execute unit tests.
- Developed comprehensive unit tests in test_guardian_by_ffmpeg.py for key functions including:
  - get_video_details
  - extract_embedded_srt
  - censor_audio_with_ffmpeg
  - matching_words
- Added integration tests to validate the complete workflow of the application.
- Updated test_requirements.txt to include necessary testing dependencies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
     "editor.formatOnSave": true,
-    "python.analysis.enableTroubleshootMissingImports": true
+    "python.analysis.enableTroubleshootMissingImports": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
