- Transformed project into package format - Introduced automatic publishing to PyPi - Created documentation and versioning

--- a/dialogue-guardian/pytest.ini
+++ b/dialogue-guardian/pytest.ini
@@ -1,14 +1,15 @@
 [tool:pytest]
-testpaths = .
+testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+pythonpath = src
 addopts = 
     -v
     --tb=short
     --strict-markers
     --disable-warnings
-    --cov=guardian_by_ffmpeg
+    --cov=guardian
     --cov-report=term-missing
     --cov-report=html:htmlcov
     --cov-report=xml:coverage.xml
