--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,84 @@
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Testing
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Documentation
+docs/_build/
+docs/_static/
+docs/_templates/
+
+# Log files (local runs)
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
 .qodo
 misc/
-__pycache__/
+
+# Package build artifacts
+dialogue_guardian.egg-info/
