--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -12,45 +12,73 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
     steps:
     - uses: actions/checkout@v4
-
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-
+    
+    - name: Install FFmpeg (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
+    
+    - name: Install FFmpeg (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install ffmpeg
+    
+    - name: Install FFmpeg (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        choco install ffmpeg
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        cd dialogue-guardian
-        pip install -e .
-        pip install -r dev-requirements.txt
-
-    - name: Run linting
+        pip install -e ".[dev]"
+    
+    - name: Run tests with coverage
       run: |
-        cd dialogue-guardian
-        make lint
-
-    - name: Run tests
-      run: |
-        cd dialogue-guardian
-        make test
-
-    - name: Upload coverage reports
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+        pytest --cov=guardian --cov-report=xml --cov-report=html
+    
+    - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        file: dialogue-guardian/coverage.xml
+        file: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
+        fail_ci_if_error: false
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e ".[dev]"
+    
+    - name: Run linting
+      run: |
+        flake8 src/ tests/
+        black --check src/ tests/
+        isort --check-only src/ tests/
 
   build:
+    needs: [test, lint]
     runs-on: ubuntu-latest
-    needs: test
-    
     steps:
     - uses: actions/checkout@v4
     
@@ -62,15 +90,16 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install build twine
     
     - name: Build package
-      run: |
-        cd dialogue-guardian
-        python -m build
+      run: python -m build
     
-    - name: Upload build artifacts
+    - name: Check package
+      run: twine check dist/*
+    
+    - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
         name: dist
-        path: dialogue-guardian/dist/
+        path: dist/
