--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,24 @@
-name: Publish Package
+name: PyPI Package
 
 on:
   release:
     types: [published]
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy to'
-        required: true
-        default: 'testpypi'
-        type: choice
-        options:
-        - testpypi
-        - pypi
+  push:
+    tags:
+      - 'v*'
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment || 'pypi' }}
-    
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
     
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
     
-    - name: Install dependencies
+    - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build twine
@@ -42,22 +31,64 @@ jobs:
     - name: Check package
       run: |
         cd dialogue-guardian
-        python -m twine check dist/*
+        twine check dist/*
     
-    - name: Publish to Test PyPI
-      if: github.event.inputs.environment == 'testpypi' || github.event_name == 'workflow_dispatch'
+    - name: Upload to Test PyPI
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && secrets.TEST_PYPI_API_TOKEN != ''
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
         cd dialogue-guardian
-        python -m twine upload --repository testpypi dist/*
+        twine upload --repository testpypi dist/*
     
-    - name: Publish to PyPI
-      if: github.event_name == 'release' || github.event.inputs.environment == 'pypi'
+    - name: Upload to PyPI
+      if: github.event_name == 'release' && secrets.PYPI_API_TOKEN != ''
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         cd dialogue-guardian
-        python -m twine upload dist/*
+        twine upload dist/*
+
+  test-install:
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.7', '3.11']
+    
+    steps:
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Install FFmpeg (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
+    
+    - name: Install FFmpeg (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install ffmpeg
+    
+    - name: Install FFmpeg (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        choco install ffmpeg
+    
+    - name: Test installation from PyPI
+      if: github.event_name == 'release'
+      run: |
+        pip install dialogue-guardian
+        guardian --help
+    
+    - name: Test installation from Test PyPI
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+      run: |
+        pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ dialogue-guardian
+        guardian --help
