--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,16 +34,17 @@ jobs:
         twine check dist/*
     
     - name: Upload to Test PyPI
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && secrets.TEST_PYPI_API_TOKEN != ''
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
         cd dialogue-guardian
         twine upload --repository testpypi dist/*
+      continue-on-error: true
     
     - name: Upload to PyPI
-      if: github.event_name == 'release' && secrets.PYPI_API_TOKEN != ''
+      if: github.event_name == 'release'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
