--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,16 +41,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        cd dialogue-guardian
         pip install -e ".[dev]"
     
     - name: Run tests with coverage
       run: |
+        cd dialogue-guardian
         pytest --cov=guardian --cov-report=xml --cov-report=html
     
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
-        file: ./coverage.xml
+        file: ./dialogue-guardian/coverage.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
@@ -68,10 +70,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        cd dialogue-guardian
         pip install -e ".[dev]"
     
     - name: Run linting
       run: |
+        cd dialogue-guardian
         flake8 src/ tests/
         black --check src/ tests/
         isort --check-only src/ tests/
@@ -93,13 +97,17 @@ jobs:
         pip install build twine
     
     - name: Build package
-      run: python -m build
+      run: |
+        cd dialogue-guardian
+        python -m build
     
     - name: Check package
-      run: twine check dist/*
+      run: |
+        cd dialogue-guardian
+        twine check dist/*
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: dist
-        path: dist/
+        path: dialogue-guardian/dist/
