--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e ".[dev]"
+        pip install -e .
+        pip install -r dev-requirements.txt
     
     - name: Run tests with coverage
       run: |
@@ -71,7 +72,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e ".[dev]"
+        pip install -e .
+        pip install -r dev-requirements.txt
     
     - name: Run linting
       run: |
