--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -21,7 +21,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e ".[dev]"
+        pip install -e .
+        pip install -r dev-requirements.txt
     
     - name: Run flake8
       run: |
