--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e ".[dev]"
+        pip install -e .
+        pip install -r test_requirements.txt
     
     - name: Run unit tests
       run: |
@@ -92,7 +93,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e ".[dev]"
+        pip install -e .
+        pip install -r test_requirements.txt
     
     - name: Run tests with coverage
       run: |
