--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+    
+    env:
+      PYTHONPATH: dialogue-guardian/src
 
     steps:
     - uses: actions/checkout@v4
@@ -42,12 +45,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e .
         pip install -r dev-requirements.txt
+        pip install -e .
     
     - name: Run tests with coverage
       run: |
         cd dialogue-guardian
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
         pytest --cov=guardian --cov-report=xml --cov-report=html
     
     - name: Upload coverage to Codecov
@@ -60,6 +64,8 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: dialogue-guardian/src
     steps:
     - uses: actions/checkout@v4
     
@@ -72,12 +78,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e .
         pip install -r dev-requirements.txt
+        pip install -e .
     
     - name: Run linting
       run: |
         cd dialogue-guardian
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
         flake8 src/ tests/
         black --check src/ tests/
         isort --check-only src/ tests/
