--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+    
+    env:
+      PYTHONPATH: dialogue-guardian/src
 
     steps:
     - name: Checkout code
@@ -54,27 +57,32 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e .
         pip install -r test_requirements.txt
+        pip install -e .
     
     - name: Run unit tests
       run: |
         cd dialogue-guardian
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
         pytest tests/ -v --tb=short
     
     - name: Run integration tests
       run: |
         cd dialogue-guardian
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
         pytest tests/ -v --tb=short -m integration
     
     - name: Test CLI functionality
       run: |
         cd dialogue-guardian
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
         python -m guardian --help
         dialogue-guardian --help
 
   coverage:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: dialogue-guardian/src
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -93,12 +101,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        pip install -e .
         pip install -r test_requirements.txt
+        pip install -e .
     
     - name: Run tests with coverage
       run: |
         cd dialogue-guardian
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
         pytest --cov=guardian --cov-report=xml --cov-report=html --cov-report=term
     
     - name: Upload coverage to Codecov
