--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,27 +57,42 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
+        echo "=== Current directory structure ==="
+        ls -la
+        echo "=== Source directory structure ==="
+        ls -la src/
+        ls -la src/guardian/
+        echo "=== Installing requirements ==="
         pip install -r test_requirements.txt
-        pip install -e .
+        echo "=== Removing conflicting setup.py temporarily ==="
+        mv setup.py setup.py.bak || echo "No setup.py to move"
+        echo "=== Installing package ==="
+        pip install -e . -v
+        echo "=== Checking installation ==="
+        pip list | grep guardian || echo "Guardian not found in pip list"
+        pip show dialogue-guardian || echo "Package not found"
+        echo "=== Testing import ==="
+        python -c "import sys; sys.path.insert(0, 'src'); import guardian; print('Guardian imported successfully')" || echo "Failed to import guardian"
     
     - name: Run unit tests
       run: |
         cd dialogue-guardian
-        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
-        pytest tests/ -v --tb=short
+        echo "=== Testing direct import ==="
+        python -c "import sys; sys.path.insert(0, 'src'); import guardian; print('Guardian found:', guardian.__version__)"
+        echo "=== Running tests with PYTHONPATH ==="
+        cd src && python -m pytest ../tests/ -v --tb=short
     
     - name: Run integration tests
       run: |
-        cd dialogue-guardian
-        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
-        pytest tests/ -v --tb=short -m integration
+        cd dialogue-guardian/src
+        python -m pytest ../tests/ -v --tb=short -m integration
     
     - name: Test CLI functionality
       run: |
-        cd dialogue-guardian
-        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
-        python -m guardian --help
-        dialogue-guardian --help
+        cd dialogue-guardian/src
+        python -m guardian --help || echo "CLI test failed"
+        cd ..
+        dialogue-guardian --help || echo "Entry point test failed"
 
   coverage:
     runs-on: ubuntu-latest
@@ -101,19 +116,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
+        echo "=== Installing requirements ==="
         pip install -r test_requirements.txt
-        pip install -e .
+        echo "=== Removing conflicting setup.py temporarily ==="
+        mv setup.py setup.py.bak || echo "No setup.py to move"
+        echo "=== Installing package ==="
+        pip install -e . -v
     
     - name: Run tests with coverage
       run: |
         cd dialogue-guardian
-        export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
-        pytest --cov=guardian --cov-report=xml --cov-report=html --cov-report=term
+        echo "=== Running coverage from src directory ==="
+        cd src && python -m pytest ../tests/ --cov=guardian --cov-report=xml --cov-report=html --cov-report=term
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
-        file: ./dialogue-guardian/coverage.xml
+        file: ./dialogue-guardian/src/coverage.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: true
