--- a/dialogue-guardian/pyproject.toml
+++ b/dialogue-guardian/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 description = "Universal Media Censor - Automatically detect and censor profane language in video files"
 readme = "README.md"
-license = "MIT"
+license = {text = "MIT"}
 requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 4 - Beta",
