--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,9 @@ jobs:
     - name: Cache pip dependencies
       uses: actions/cache@v4
       with:
-        path: ~/.cache/pip
+        path: |
+          ~/.cache/pip
+          ~\AppData\Local\pip\Cache
         key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
         restore-keys: |
           ${{ runner.os }}-pip-
@@ -57,19 +59,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd dialogue-guardian
-        echo "=== Current directory structure ==="
-        ls -la
-        echo "=== Source directory structure ==="
-        ls -la src/
-        ls -la src/guardian/
         echo "=== Installing requirements ==="
         pip install -r test_requirements.txt
-        echo "=== Removing conflicting setup.py temporarily ==="
-        mv setup.py setup.py.bak || echo "No setup.py to move"
         echo "=== Installing package ==="
         pip install -e . -v
         echo "=== Checking installation ==="
-        pip list | grep guardian || echo "Guardian not found in pip list"
         pip show dialogue-guardian || echo "Package not found"
         echo "=== Testing import ==="
         python -c "import sys; sys.path.insert(0, 'src'); import guardian; print('Guardian imported successfully')" || echo "Failed to import guardian"
@@ -79,13 +73,11 @@ jobs:
         cd dialogue-guardian
         echo "=== Testing direct import ==="
         python -c "import sys; sys.path.insert(0, 'src'); import guardian; print('Guardian found:', guardian.__version__)"
-        echo "=== Running tests with PYTHONPATH ==="
-        cd src && python -m pytest ../tests/ -v --tb=short
+        echo "=== Running tests ==="
+        cd src
+        python -m pytest ../tests/ -v --tb=short
     
-    - name: Run integration tests
-      run: |
-        cd dialogue-guardian/src
-        python -m pytest ../tests/ -v --tb=short -m integration
+
     
     - name: Test CLI functionality
       run: |
@@ -118,8 +110,6 @@ jobs:
         cd dialogue-guardian
         echo "=== Installing requirements ==="
         pip install -r test_requirements.txt
-        echo "=== Removing conflicting setup.py temporarily ==="
-        mv setup.py setup.py.bak || echo "No setup.py to move"
         echo "=== Installing package ==="
         pip install -e . -v
     
