--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,11 +45,11 @@ jobs:
     
     - name: Bump version
       id: bump
+      working-directory: dialogue-guardian
       run: |
-        cd dialogue-guardian
         # Create .bumpversion.cfg if it doesn't exist
         if [ ! -f .bumpversion.cfg ]; then
-          cat > .bumpversion.cfg << EOF
+          cat > .bumpversion.cfg << 'EOF'
         [bumpversion]
         current_version = 1.1.0
         commit = True
@@ -75,17 +75,17 @@ jobs:
         
         # Get the new version
         NEW_VERSION=$(grep "current_version" .bumpversion.cfg | cut -d' ' -f3)
-        echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-        echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+        echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_ENV
+        echo "version=${NEW_VERSION}" >> $GITHUB_OUTPUT
     
     - name: Build package
+      working-directory: dialogue-guardian
       run: |
-        cd dialogue-guardian
         python -m build
     
     - name: Generate changelog
+      working-directory: dialogue-guardian
       run: |
-        cd dialogue-guardian
         # Simple changelog generation
         echo "## Version ${{ env.NEW_VERSION }}" > CHANGELOG_ENTRY.md
         echo "" >> CHANGELOG_ENTRY.md
