--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: PyPI Package
+name: Publish to PyPI
 
 on:
   release:
@@ -6,6 +6,16 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Choose target environment'
+        required: true
+        default: 'testpypi'
+        type: choice
+        options:
+          - testpypi
+          - pypi
 
 jobs:
   build:
@@ -21,6 +31,7 @@ jobs:
         echo "Event name: ${{ github.event_name }}"
         echo "Ref: ${{ github.ref }}"
         echo "Repository: ${{ github.repository }}"
+        echo "Manual environment choice: ${{ github.event.inputs.environment || 'not manual' }}"
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -43,17 +54,27 @@ jobs:
         twine check dist/*
     
     - name: Upload to Test PyPI
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+      if: |
+        (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
+        (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'testpypi')
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
         cd dialogue-guardian
+        echo "Publishing to Test PyPI..."
+        if [ -z "${{ secrets.TEST_PYPI_API_TOKEN }}" ]; then
+          echo "WARNING: TEST_PYPI_API_TOKEN secret is not set!"
+          echo "Skipping Test PyPI upload."
+          exit 0
+        fi
         twine upload --repository testpypi dist/*
       continue-on-error: true
     
     - name: Upload to PyPI
-      if: github.event_name == 'release'
+      if: |
+        (github.event_name == 'release') ||
+        (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'pypi')
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
