--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,18 @@ jobs:
         EOF
         fi
         
-        # Bump version
+        # Check what version we would bump to
+        NEXT_VERSION=$(bump2version --dry-run --list ${{ github.event.inputs.version_type }} | grep new_version= | cut -d= -f2)
+        echo "Next version would be: $NEXT_VERSION"
+        
+        # Delete existing tag if it exists (locally and remotely)
+        if git tag -l "v$NEXT_VERSION" | grep -q "v$NEXT_VERSION"; then
+          echo "Tag v$NEXT_VERSION already exists, deleting it..."
+          git tag -d "v$NEXT_VERSION" || true
+          git push origin ":refs/tags/v$NEXT_VERSION" || true
+        fi
+        
+        # Now bump version
         bump2version ${{ github.event.inputs.version_type }}
     
     - name: Get new version
@@ -107,6 +118,13 @@ jobs:
         echo "### Changes" >> CHANGELOG_ENTRY.md
         git log --oneline --pretty=format:"- %s" $(git describe --tags --abbrev=0 HEAD^)..HEAD >> CHANGELOG_ENTRY.md || echo "- Initial release" >> CHANGELOG_ENTRY.md
     
+    - name: Push tag (to trigger publish workflow)
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+        git push origin v${{ env.NEW_VERSION }}
+    
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       env:
@@ -119,3 +137,19 @@ jobs:
         prerelease: ${{ github.event.inputs.prerelease }}
         files: dialogue-guardian/dist/*
         generate_release_notes: true
+    
+    - name: Trigger PyPI Publish
+      uses: actions/github-script@v7
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          await github.rest.actions.createWorkflowDispatch({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'publish.yml',
+            ref: 'main',
+            inputs: {
+              environment: 'pypi'
+            }
+          });
+          console.log('Triggered PyPI publish workflow');
