--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,18 +138,12 @@ jobs:
         files: dialogue-guardian/dist/*
         generate_release_notes: true
     
-    - name: Trigger PyPI Publish
-      uses: actions/github-script@v7
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          await github.rest.actions.createWorkflowDispatch({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            workflow_id: 'publish.yml',
-            ref: 'main',
-            inputs: {
-              environment: 'pypi'
-            }
-          });
-          console.log('Triggered PyPI publish workflow');
+    - name: Wait for PyPI Publish
+      run: |
+        echo "✅ Release created successfully!"
+        echo "📦 The PyPI publish workflow should be triggered automatically by:"
+        echo "   1. Tag push: v${{ env.NEW_VERSION }}"
+        echo "   2. GitHub release creation"
+        echo ""
+        echo "🔍 Check the Actions tab to see the 'Publish to PyPI' workflow running."
+        echo "🚀 Your package will be available on PyPI shortly!"
