--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,14 +34,20 @@ jobs:
         run: |
           echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
 
-      - name: Print pip cache directory
-        run: |
-          echo "Pip cache directory: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}"
-
       - name: Cache pip dependencies
         uses: actions/cache@v4
+        if: runner.os != 'Windows'
         with:
           path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Cache pip dependencies (Windows)
+        uses: actions/cache@v4
+        if: runner.os == 'Windows'
+        with:
+          path: ~\AppData\Local\pip\Cache
           key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
             ${{ runner.os }}-pip-
