--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,13 +33,19 @@ jobs:
 
       - name: Get pip cache directory
         id: pip-cache
-        run: echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+        shell: python
+        run: |
+          import subprocess
+          import os
+          result = subprocess.run(["pip", "cache", "dir"], capture_output=True, text=True)
+          with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
+              fh.write(f"PIP_CACHE_DIR={result.stdout.strip()}\n")
 
       - name: Cache pip dependencies
         uses: actions/cache@v4
         with:
           path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/dev-requirements.txt') }}-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
