--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2025 Tony Snearly
+# SPDX-License-Identifier: OSL-3.0
 name: CI/CD Pipeline
 
 on:
@@ -70,7 +72,7 @@ jobs:
         exclude:
           - os: windows-latest
             python-version: "3.9"
-          - os: windows-latest 
+          - os: windows-latest
             python-version: "3.10"
           - os: macos-latest
             python-version: "3.9"
