--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2025 Tony Snearly
+# SPDX-License-Identifier: OSL-3.0
 name: Code Quality
 
 # This workflow runs additional quality checks beyond the basic CI
@@ -6,16 +8,16 @@ on:
   push:
     branches: [main, develop]
     paths:
-      - 'dialogue-guardian/src/**'
-      - 'dialogue-guardian/tests/**'
-      - '.github/workflows/quality.yml'
+      - "dialogue-guardian/src/**"
+      - "dialogue-guardian/tests/**"
+      - ".github/workflows/quality.yml"
   pull_request:
     branches: [main]
     paths:
-      - 'dialogue-guardian/src/**' 
-      - 'dialogue-guardian/tests/**'
+      - "dialogue-guardian/src/**"
+      - "dialogue-guardian/tests/**"
   schedule:
-    - cron: '0 6 * * 1'  # Weekly on Monday at 6 AM UTC
+    - cron: "0 6 * * 1" # Weekly on Monday at 6 AM UTC
   workflow_dispatch:
 
 env:
