fix: resolve unit test failures and CLI argument compatibility issues
- Add missing _construct_ffmpeg_command method for backward compatibility with tests
- Update CLI tests to use --verbose instead of deprecated --debug argument
- Fix CLI implementation to use args.verbose instead of args.debug
- Update CLI to use censor_audio_with_ffmpeg instead of deprecated process_video method
- Add proper error handling for file cleanup operations to prevent FileNotFoundError
- Update test assertions to match enhanced audio filtering system (-80dB instead of -inf)
- Fix filter construction to use enhanced strategy system with proper volume levels

These changes maintain backward compatibility while supporting the enhanced audio
censoring system with multi-strategy fallback mechanisms.

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -70,7 +70,7 @@ jobs:
           echo "=== Security Analysis ==="
           bandit -r src/guardian/ -f json -o bandit-report.json || true
           bandit -r src/guardian/ || echo "Security issues found"
-          safety check || echo "Dependency vulnerabilities found"
+          safety scan || echo "Dependency vulnerabilities found"
           semgrep --config=auto src/guardian/ --json --output=semgrep-report.json || echo "Semgrep issues found"
 
       - name: Upload quality reports
