--- a/dialogue-guardian/.bumpversion.cfg
+++ b/dialogue-guardian/.bumpversion.cfg
@@ -17,8 +17,8 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:docs/conf.py]
-search = release = '{current_version}'{eol}current_version = '{current_version}'
-replace = release = '{new_version}'{eol}current_version = '{new_version}'
+search = {current_version}
+replace = {new_version}
 
 [bumpversion:file:../README.md]
 search = __VERSION__
