refactor(guardian): Modernize legacy guardian module and workflow configuration
- Refactor guardian.py to improve code quality and readability
- Update .flake8 configuration to increase max line length and exclude legacy directory
- Modify release.yml workflow to simplify PyPI publishing logic
- Remove unnecessary imports and improve type handling
- Add more robust error handling and logging in video details extraction
- Implement more precise time conversion function for FCPXML generation
- Clean up code formatting and remove commented-out sections
- Enhance function signatures and improve code modularity
Resolves technical debt and improves overall code maintainability

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,17 +140,13 @@ jobs:
           generate_release_notes: true
 
       - name: Publish to PyPI
-        if: github.event.inputs.prerelease == 'false'
+        environment: pypi
+        if: github.event.inputs.prerelease == 'true'
+          environment:
+            name: testpypi
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           twine upload dialogue-guardian/dist/*
-
-      - name: Publish to TestPyPI
-        if: github.event.inputs.prerelease == 'true'
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: |
-          twine upload --repository testpypi dialogue-guardian/dist/*
+          #twine upload --repository testpypi dialogue-guardian/dist/*
